// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project|View Default 1`] = `
.c15 {
  height: 155px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c16 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c1 {
  width: calc(100% - 50px);
}

.c4 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c5 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 30px;
}

.c8 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
  display: block;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c6:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c7 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #FFF;
  padding: 8px 0 13px;
  display: block;
}

.c7 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c7:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c9 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  padding: 0;
  margin: 10px 0;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
  display: inline-block;
}

.c9 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c9:hover {
  border-bottom: 1px solid #FFF;
}

.c2 {
  word-break: break-word;
}

.c3 {
  word-break: break-word;
}

.c14 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

.c10 {
  display: none;
}

.c13 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #2F2F36;
  cursor: pointer;
}

.c13:hover {
  border-bottom-color: #FFF;
}

.c11 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #FFF;
  cursor: pointer;
}

.c11:hover {
  border-bottom-color: #FFF;
}

.c12 {
  color: #FFF;
  display: block;
  padding: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:1040px) {
  .c17 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c16 {
    position: fixed;
    width: calc(100% - 40px);
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c1 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c4 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1040px) {
  .c6 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c7 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c10 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin: 29px 0 20px 0;
    font-size: 15px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div>
      <div
        className="c1"
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": "18px",
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className=""
            >
              <h2
                className="c2"
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                <span>
                  Project
                </span>
              </h2>
              <h1
                className="c3"
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                Project Name
              </h1>
            </div>
          </div>
          <button
            disabled={false}
            id="topHeaderOpenMenuBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": 6,
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": null,
              "minHeight": "100vh",
              "padding": "18px 20px 27px",
              "position": "fixed",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <div
            className=""
          >
            <div
              className=""
            >
              <h2
                className="c2"
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                <span>
                  Project
                </span>
              </h2>
              <h1
                className="c3"
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                Project Name
              </h1>
            </div>
          </div>
          <div
            className="c4"
          >
            <ul
              className="c5"
            >
              <li
                className="c6"
              >
                <a
                  href="/project"
                  id="projectNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Projects
                  </span>
                </a>
              </li>
              <li
                className="c6"
              >
                <a
                  href="/user"
                  id="userNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Users
                  </span>
                </a>
              </li>
              <li
                className="c6"
              >
                <a
                  href="/project/100"
                  id="projectDetailsNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Project details
                  </span>
                </a>
              </li>
              <li
                className="c6"
              >
                <a
                  href="/project/100/datasource"
                  id="dataSourceNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Data Sources
                  </span>
                </a>
              </li>
              <li
                className="c6"
              >
                <a
                  href="/project/100/folder"
                  id="folderNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Pages
                  </span>
                </a>
              </li>
              <li
                className="c6"
              >
                <a
                  href="/settings"
                  id="settingsNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Settings
                  </span>
                </a>
              </li>
              <li
                className="c7"
                id="logoutNavBtn"
                onClick={[Function]}
              >
                <span>
                  Log out
                </span>
              </li>
            </ul>
            <ul
              className="c8"
            >
              <li
                className="c9"
              >
                <a
                  href="/"
                  id="aboutNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    About Schema CMS
                  </span>
                </a>
              </li>
              <li
                className="c9"
              >
                <a
                  href="/"
                  id="apiNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    API Doc
                  </span>
                </a>
              </li>
              <li
                className="c9"
              >
                <a
                  href="/"
                  id="repositoryNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    GitHub Repository
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <button
            disabled={false}
            id="topHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": "6px",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className=""
      >
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <a
              className="c12"
              href="/project/100"
              onClick={[Function]}
            >
              <span>
                Settings
              </span>
            </a>
          </div>
          <div
            className="c13"
          >
            <a
              className="c12"
              href="/project/100/datasource"
              onClick={[Function]}
            >
              <span>
                Sources
              </span>
            </a>
          </div>
          <div
            className="c13"
          >
            <a
              className="c12"
              href="/project/100/user"
              onClick={[Function]}
            >
              <span>
                Users
              </span>
            </a>
          </div>
          <div
            className="c13"
          >
            <a
              className="c12"
              href="/project/100/folder"
              onClick={[Function]}
            >
              <span>
                Pages
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        className="c14"
      >
        <span>
          Loading...
        </span>
      </div>
    </div>
    <div
      className="c15"
    >
      <div
        className="c16"
      >
        <div
          className="c17"
        >
          <button
            disabled={false}
            id="backProjectBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project|View No data 1`] = `
.c15 {
  height: 155px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c16 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c1 {
  width: calc(100% - 50px);
}

.c4 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c5 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 30px;
}

.c8 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
  display: block;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c6:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c7 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #FFF;
  padding: 8px 0 13px;
  display: block;
}

.c7 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c7:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c9 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  padding: 0;
  margin: 10px 0;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
  display: inline-block;
}

.c9 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c9:hover {
  border-bottom: 1px solid #FFF;
}

.c2 {
  word-break: break-word;
}

.c3 {
  word-break: break-word;
}

.c14 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

.c10 {
  display: none;
}

.c13 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #2F2F36;
  cursor: pointer;
}

.c13:hover {
  border-bottom-color: #FFF;
}

.c11 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #FFF;
  cursor: pointer;
}

.c11:hover {
  border-bottom-color: #FFF;
}

.c12 {
  color: #FFF;
  display: block;
  padding: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:1040px) {
  .c17 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c16 {
    position: fixed;
    width: calc(100% - 40px);
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c1 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c4 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1040px) {
  .c6 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c7 {
    padding: 22px 0 27px;
    font-size: 20px;
  }
}

@media (min-width:1040px) {
  .c10 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin: 29px 0 20px 0;
    font-size: 15px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div>
      <div
        className="c1"
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": "18px",
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className=""
            >
              <h2
                className="c2"
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                <span>
                  Project
                </span>
              </h2>
              <h1
                className="c3"
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              />
            </div>
          </div>
          <button
            disabled={false}
            id="topHeaderOpenMenuBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": 6,
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": null,
              "minHeight": "100vh",
              "padding": "18px 20px 27px",
              "position": "fixed",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <div
            className=""
          >
            <div
              className=""
            >
              <h2
                className="c2"
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                <span>
                  Project
                </span>
              </h2>
              <h1
                className="c3"
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              />
            </div>
          </div>
          <div
            className="c4"
          >
            <ul
              className="c5"
            >
              <li
                className="c6"
              >
                <a
                  href="/project"
                  id="projectNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Projects
                  </span>
                </a>
              </li>
              <li
                className="c6"
              >
                <a
                  href="/user"
                  id="userNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Users
                  </span>
                </a>
              </li>
              <li
                className="c6"
              >
                <a
                  href="/project/100"
                  id="projectDetailsNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Project details
                  </span>
                </a>
              </li>
              <li
                className="c6"
              >
                <a
                  href="/project/100/datasource"
                  id="dataSourceNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Data Sources
                  </span>
                </a>
              </li>
              <li
                className="c6"
              >
                <a
                  href="/project/100/folder"
                  id="folderNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Pages
                  </span>
                </a>
              </li>
              <li
                className="c6"
              >
                <a
                  href="/settings"
                  id="settingsNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Settings
                  </span>
                </a>
              </li>
              <li
                className="c7"
                id="logoutNavBtn"
                onClick={[Function]}
              >
                <span>
                  Log out
                </span>
              </li>
            </ul>
            <ul
              className="c8"
            >
              <li
                className="c9"
              >
                <a
                  href="/"
                  id="aboutNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    About Schema CMS
                  </span>
                </a>
              </li>
              <li
                className="c9"
              >
                <a
                  href="/"
                  id="apiNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    API Doc
                  </span>
                </a>
              </li>
              <li
                className="c9"
              >
                <a
                  href="/"
                  id="repositoryNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    GitHub Repository
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <button
            disabled={false}
            id="topHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": "6px",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className=""
      >
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <a
              className="c12"
              href="/project/100"
              onClick={[Function]}
            >
              <span>
                Settings
              </span>
            </a>
          </div>
          <div
            className="c13"
          >
            <a
              className="c12"
              href="/project/100/datasource"
              onClick={[Function]}
            >
              <span>
                Sources
              </span>
            </a>
          </div>
          <div
            className="c13"
          >
            <a
              className="c12"
              href="/project/100/user"
              onClick={[Function]}
            >
              <span>
                Users
              </span>
            </a>
          </div>
          <div
            className="c13"
          >
            <a
              className="c12"
              href="/project/100/folder"
              onClick={[Function]}
            >
              <span>
                Pages
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        className="c14"
      >
        <span>
          Loading...
        </span>
      </div>
    </div>
    <div
      className="c15"
    >
      <div
        className="c16"
      >
        <div
          className="c17"
        >
          <button
            disabled={false}
            id="backProjectBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
